# edifier

./: .gitignore  Cargo.toml  LICENSE  README.md  test
.github/workflows/: rust.yml
examples/: Makefile  xilinx_inverter.rs  xilinx_multiplier.rs
others/: picoblaze_reduced.edf  picoblaze_top.edf
others/vivado_minimal/: Makefile  dsp_2.edf  load_edif.tcl  test_orig.edf
src/: ast.rs  edifier.rs  helpers.rs  lib.rs  main.rs  serialize.rs  string_helpers.rs  xilinx.rs
src/edifier/: Cargo.toml
src/edifier/src/: serialize.rs
src/edifier/tests/: unit_tests.rs
tests/: string_helpers_ut.rs  unit_tests.rs  xilinx_ut.rs
