[package]
name = "pedro_edif"
version = "0.1.0"
authors = ["Pedro Torruella <ptorru14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

