[package]
name = "edifier"
version = "0.1.0"
authors = ["Pedro Torruella <ptorru14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_sexpr = "0.1.0"
expect-test = "1.0.2"
derive_more = { version = "0.99.14" , features = ["from"]}

